
- #13787: a new -dcanonical-ids option to show canonicalized identifier stamps
  in -d{lambda,cmm,...} outputs.
  (Gabriel Scherer, review by Vincent Laviron and David Allsopp,
   suggested by David Allsopp)

- #13302: Store locations of longidents components
  (Ulysse Gérard and Jules Aguillon, review by Jules Aguillon
   and Florian Angeletti)

- #13820: Add a new option -i-variance to print the variance of every
  type parameter; bivariance is printed as `+-`, and for consistency,
  parser is modified too to accept `+-` and `-+` as `type_variance`.
  (Takafumi Saikawa and Jacques Garrigue, review by Florian Angeletti)

- #13848: Add all paths components to the cmt files indexes
  (Ulysse Gérard, review by Florian Angeletti)

- #13856: Add a new indirection in types AST called `package` that stores the
  content of a `Tpackage` node
  (Samuel Vivien, review by Florian Angeletti)

### Build system:

- #13431: Simplify github action responsible for flagging PRs with
  the `parsetree-changes` label and extend it to mention the @ppxlib-dev
  team.
  (Nathan Rebours, review by Florian Angeletti)

- #13494: Use native symlinks on Windows for the OCaml installation, reducing
  disk usage considerably.
  (David Allsopp, review by Nicolás Ojeda Bär and Gabriel Scherer)

* #13526, #13789, #13804: Simplify the build of cross compilers
  This replaces the configure `--with-target-bindir` option by an equivalent
  `TARGET_BINDIR` variable
  (Samuel Hym, review by Miod Vallat, Xavier Leroy, Antonin Décimo and Sébastien
  Hinderer)

- #13789: Strictly validate the host and target triplets when building for the
  Windows ports to be *-*-cygwin, *-w64-mingw32* or *-pc-windows. Other Cygwin
  variants used to be rejected - other MSVC and mingw-w64 variants are now
  rejected too.
  (David Allsopp, review by Antonin Décimo and Gabriel Scherer)

### Bug fixes:

- #13691: Make four globals underlying Gc.control atomic to avoid C data
  races against them